# My-First-CrewAI

./: .env  pyproject.toml  requirements.txt
db/: chroma.sqlite3
src/account_planning/: agent_list.yaml  agents.py  main.py  task_list.yaml  tasks.py
src/crew_builder_crew/: agents.py  llms.py  main.py  tasks.py
src/crew_builder_crew/bak/: agents.py  agents.yaml  main.py  tasks.py
src/crew_builder_crew/bak/yaml way/: crew.py  main.py
src/crew_builder_crew/bak/yaml way/config/: agents.yaml  tasks.yaml
src/crew_builder_crew/examples/: agent_list.yaml  agents.py  main.py  task_list.yaml  tasks.py
src/crew_builder_crew/examples/old/: agents.yaml  crew.py  tasks.yaml
src/crew_builder_crew/output/: agent_list.yaml  agents.py  main.py  task_list.yaml  tasks.py
src/workshop_wed/: agents.py  llms.py  main.py  tasks.py
src/workshop_wed/output/: newsletter.html  newsletter.json
src/workshop_wed/resources/: assessment.csv  assessments.json  newsletter.j2  training.csv  workshop_wednesday.csv
src/workshop_wed/tools/: csv_tools.py  html_tools.py  json_tools.py  web_tools.py
